--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/bulma/bulma.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
   <link rel="shortcut icon" href="assets/images/cex.ico" />
-  <script src="assets/javascript/main.js"></script>
 </head>
 
 <body>
@@ -34,24 +33,24 @@
     </div>
     <div class="column is-half has-centered">
       <nav class="level-item">
-        <a class="navbar-link is-blue-bg">
+        <a class="navbar-link is-blue-bg" value="Weather">
           Weather
         </a>
-        <a class="navbar-link is-blue-bg">
+        <a class="navbar-link is-blue-bg" value="Food">
           Food
         </a>
-        <a class="navbar-link is-blue-bg">
+        <a class="navbar-link is-blue-bg" value="Events">
           Events
         </a>
       </nav>
     </div>
     <div class="columns level-item">
       <div class="column is-three-quarters has-background-black level-item">
-          <div class="main">Test
-              </div>
-            </div>
+        <div class="main">Test
         </div>
       </div>
+    </div>
+    </div>
     </div>
   </section>
   <div class="footer fix-footer is-marginless is-paddingless">
@@ -63,6 +62,10 @@
       </p>
     </div>
   </div>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="assets/javascript/main.js"></script>
 </body>
 
 </html>
