--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
       <div class="spacer level-item">
         <div class="field has-addons">
           <p class="control">
-            <input class="input" type="text" placeholder="City, state to search!">
+            <input id="searchBar" class="input" type="text" placeholder="City, state to search!">
+            <select id="stateSelect"></select>
           </p>
           <p class="control">
-            <button class="button">
+            <button id="searchButton" class="button">
               Explore
             </button>
           </p>
