--- a/index.html
+++ b/index.html
@@ -32,22 +32,23 @@
         </div>
       </div>
     </div>
+    <div id="errorMsg" style="color: red; text-align: center"></div>
     <div class="column is-half has-centered">
       <nav class="level-item">
-        <a class="navbar-link is-blue-bg" value="Weather">
+        <a class="navbar-link is-blue-bg" id="weatherTab">
           Weather
         </a>
-        <a class="navbar-link is-blue-bg" value="Food">
+        <a class="navbar-link is-blue-bg" id="foodTab">
           Food
         </a>
-        <a class="navbar-link is-blue-bg" value="Events">
+        <a class="navbar-link is-blue-bg" value="eventsTab">
           Events
         </a>
       </nav>
     </div>
     <div class="columns level-item">
       <div class="column is-three-quarters has-background-black level-item">
-        <div class="main">Test
+        <div id="content" class="main">Test
         </div>
       </div>
     </div>
@@ -66,6 +67,7 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/moment"></script>
   <script src="assets/javascript/main.js"></script>
 </body>
 
