--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="navbar-link is-blue-bg" id="foodTab">
           Food
         </a>
-        <a class="navbar-link is-blue-bg" value="eventsTab">
+        <a class="navbar-link is-blue-bg" id="eventsTab">
           Events
         </a>
       </nav>
